<resources>
    <string name="app_name">UdacityPortfolioApps</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">My App Portfolio</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="media_streamer">Spotify Streamer</string>
    <string name="super_duo">Scores App</string>
    <string name="super_duo2">Library App</string>
    <string name="ant_terminator">Build It Bigger</string>
    <string name="materialize">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>
</resources>
